# vpn-dns-demo

./: README.md  logcat.sh  run.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/rahul/secretcodes/vvpn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/rahul/secretcodes/vvpn/: MainActivity.java  MyVpnService.java  RustBridge.java  Stream.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/rahul/secretcodes/vvpn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tunnel/: Cargo.toml
tunnel/src/: lib.rs
