[package]
name = "tunnel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.15.0"
jni = {version = "0.21.1", features = ["default"]}
log = "0.4.26"
nix = { version = "0.29.0", features = ["fs"] }
pnet = "0.35.0"
tokio = {version = "1.44.1", features = ["rt-multi-thread", "time"]}
